# parallel_algos_hws

./: Assignment10.c  Assignment10.cpp  Assignment11.cpp  Assignment12.c  Assignment12.cpp  Assignment13.c  Assignment13.cpp  Assignment14.c  Assignment14.cpp  Assignment15.c  Assignment15.cpp  Assignment16.c  Assignment16.cpp  Assignment17.c  Assignment17.cpp  Assignment18_master.c  Assignment18_master.cpp  Assignment18_slave.c  Assignment18_slave.cpp  Assignment19_client.c  Assignment19_client.cpp  Assignment19_serv.c  Assignment19_serv.cpp  Assignment20.c  Assignment20.cpp  Assignment21.c  Assignment21.cpp  Assignment3.c  Assignment3.cpp  Assignment4.cpp  Assignment5.cpp  Assignment6.cpp  Assignment7.cpp  Assignment8.cpp  Assignment9.cpp  CMakeLists.txt  README.md  Task0.cpp  Task1.cpp  Task2.cpp  (+1 more)
